welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: not found: value setBrosseCouleur
      setBrosseCouleur()
      ^